[gd_scene load_steps=2 format=3 uid="uid://6xee2ufh15h0"]

[ext_resource type="Script" uid="uid://b8kj57gvubtpp" path="res://menu_ui/Saves/save_menu.gd" id="1_aou68"]

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aou68")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -50.5
offset_right = 104.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Slot 1"

[node name="Slot 1 Load" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Slot 2"

[node name="Slot 2 Load" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Load"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Slot 3"

[node name="Slot 3 Load" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Load"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Slot 1 Load" to="." method="_on_slot_1_load_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Slot 2 Load" to="." method="_on_slot_2_load_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Slot 3 Load" to="." method="_on_slot_3_load_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
